Reorganize classes/packages. Add viewmodel. Add reposirory. Implement saving categories.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,5 @@ dependencies {
 
     //Logging
     implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 }
