--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -38,10 +43,12 @@ dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.0.2'
 
-    //Android
+    //UI
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'io.github.luizgrp.sectionedrecyclerviewadapter:sectionedrecyclerviewadapter:2.1.0'
 
     //Testing
     testImplementation 'junit:junit:4.12'
@@ -67,9 +74,9 @@ dependencies {
 //    implementation "com.jakewharton.rxbinding3:rxbinding-drawerlayout:$rx_binding_version"
 //    implementation "com.jakewharton.rxbinding3:rxbinding-leanback:$rx_binding_version"
     implementation "com.jakewharton.rxbinding3:rxbinding-recyclerview:$rx_binding_version"
-    implementation "com.jakewharton.rxbinding3:rxbinding-slidingpanelayout:$rx_binding_version"
-    implementation "com.jakewharton.rxbinding3:rxbinding-swiperefreshlayout:$rx_binding_version"
-    implementation "com.jakewharton.rxbinding3:rxbinding-viewpager:$rx_binding_version"
+//    implementation "com.jakewharton.rxbinding3:rxbinding-slidingpanelayout:$rx_binding_version"
+//    implementation "com.jakewharton.rxbinding3:rxbinding-swiperefreshlayout:$rx_binding_version"
+//    implementation "com.jakewharton.rxbinding3:rxbinding-viewpager:$rx_binding_version"
 
     //Logging
     implementation 'com.jakewharton.timber:timber:4.7.1'
