--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,18 +43,22 @@ dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.0.2'
 
-    //UI
+    //Android
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'androidx.appcompat:appcompat:1.0.2'
+
+    //UI
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'androidx.viewpager2:viewpager2:1.0.0-alpha01'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0-beta03'
     implementation 'io.github.luizgrp.sectionedrecyclerviewadapter:sectionedrecyclerviewadapter:2.1.0'
 
     //Testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'android.arch.core:core-testing:1.1.1'
 
     //ROOM
     def room_version = '2.1.0'
@@ -74,12 +78,11 @@ dependencies {
     implementation "com.jakewharton.rxbinding3:rxbinding-appcompat:$rx_binding_version"
 //    implementation "com.jakewharton.rxbinding3:rxbinding-drawerlayout:$rx_binding_version"
 //    implementation "com.jakewharton.rxbinding3:rxbinding-leanback:$rx_binding_version"
-    implementation "com.jakewharton.rxbinding3:rxbinding-recyclerview:$rx_binding_version"
+//    implementation "com.jakewharton.rxbinding3:rxbinding-recyclerview:$rx_binding_version"
 //    implementation "com.jakewharton.rxbinding3:rxbinding-slidingpanelayout:$rx_binding_version"
 //    implementation "com.jakewharton.rxbinding3:rxbinding-swiperefreshlayout:$rx_binding_version"
 //    implementation "com.jakewharton.rxbinding3:rxbinding-viewpager:$rx_binding_version"
 
     //Logging
     implementation 'com.jakewharton.timber:timber:4.7.1'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 }
