--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:allowBackup="false"
             tools:ignore="GoogleAppIndexingWarning">
         <activity
-                android:name=".presentation.MainActivity"
+                android:name=".presentation.main.MainActivity"
                 android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
