--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,4 +95,11 @@ dependencies {
 
     //Logging
     implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    //DI
+    def koin_version = '2.0.1'
+    implementation "org.koin:koin-android:$koin_version" //Koin for Android
+    implementation "org.koin:koin-androidx-scope:$koin_version" //Koin AndroidX Scope features
+    implementation "org.koin:koin-androidx-viewmodel:$koin_version"//Koin AndroidX ViewModel features
+    implementation "org.koin:koin-androidx-ext:$koin_version" //Koin AndroidX Experimental features
 }
